# embedded_scheme

./: .gitignore  CMakeLists.txt  main.c  main.cpp  prog.scm  run_koans.cpp  set_env.sh  y_notes.scm
cmake/: External_GTest.cmake  External_chez.cmake
koan_tests/: all.hpp  conditional.hpp  fixture.hpp  grains.hpp  phone.hpp
koans/: conditional.scm  grains.scm  phone.scm
